<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white2">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/registertext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/abeezee"
                android:text="@string/registertext"
                android:textAlignment="center"
                android:textColor="#018786"
                android:textSize="50sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="5dp"
                android:src="@drawable/username_img"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/uploadbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="-45dp"
                android:contentDescription="@string/uploadimg"
                android:focusable="true"
                app:srcCompat="@drawable/cameraimg"
                tools:ignore="RedundantDescriptionCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="#018786"
                app:boxStrokeColor="#018786"
                app:boxStrokeWidth="2dp"
                app:placeholderTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_username"
                app:startIconTint="#000000">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phonenumberLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="#018786"
                app:boxStrokeColor="#018786"
                app:boxStrokeWidth="2dp"
                app:placeholderTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_phonenumber"
                app:startIconTint="#000000">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phonenumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/phonenumber"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/invalidephone"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="start"
                android:layout_marginStart="25dp"
                android:layout_weight="1"
                android:alpha="0.7"
                android:singleLine="true"
                android:text="@string/invalidephone"
                android:textColor="#FF0000"
                android:textSize="11sp"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailforforgotLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="#018786"
                app:boxStrokeColor="#018786"
                app:boxStrokeWidth="2dp"
                app:placeholderTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="#000000">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailforforgot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:inputType="none|textEmailAddress"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/invalidemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="25dp"
                android:alpha="0.7"
                android:singleLine="true"
                android:text="@string/invalidemail"
                android:textColor="#FF0000"
                android:textSize="11sp"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="#018786"
                app:boxStrokeColor="#018786"
                app:boxStrokeWidth="2dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#000000"
                app:placeholderTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="#000000">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/invalidpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="25dp"
                android:alpha="0.7"
                android:singleLine="true"
                android:text="@string/invalidpass"
                android:textColor="#FF0000"
                android:textSize="11sp"
                tools:ignore="TextContrastCheck" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confpasswordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="#018786"
                app:boxStrokeColor="#018786"
                app:boxStrokeWidth="2dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#000000"
                app:placeholderTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="#000000">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/repassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/repassword"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/registerbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#018786"
                    android:text="@string/registerbtn"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    app:strokeColor="#000000"
                    tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />
            </FrameLayout>

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/haveaccount"
                android:textAlignment="center"
                android:textColor="#397A7A"
                android:textSize="11sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>