<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white2"
    android:orientation="horizontal">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/loginlogo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="60dp"
                android:contentDescription="@string/loginlogo"
                android:padding="5dp"
                app:srcCompat="@drawable/login" />

            <TextView
                android:id="@+id/logintxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/abeezee"
                android:importantForAutofill="no"
                android:text="@string/logintext"
                android:textColor="#018786"
                android:textSize="50sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="LabelFor,TextFields" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phonenumberforotpLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="#018786"
                app:boxStrokeColor="#018786"
                app:boxStrokeWidth="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/verifyotptxt"
                app:placeholderTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_username"
                app:startIconTint="#000000">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phonenumberforotp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:hint="@string/phoneoremail"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="#018786"
                app:boxStrokeColor="#018786"
                app:boxStrokeWidth="2dp"
                app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernameLayout1"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#000000"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="#000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password1"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="21dp"
                android:text="@string/forgotpassword"
                android:textColor="#018786"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordLayout1"
                tools:ignore="TextContrastCheck" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/sendotpbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#018786"
                    android:text="@string/loginbtn"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordLayout1"
                    app:strokeColor="#000000"
                    tools:ignore="TouchTargetSizeCheck" />

                <ProgressBar
                    android:id="@+id/progressBar1"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="35dp"
                    android:layout_height="33dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:visibility="gone" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sendotpbtn">

                <TextView
                    android:id="@+id/donthaveaccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newuser"
                    android:textColor="#397A7A"
                    android:textSize="11sp"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <TextView
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/newusersignup"
                    android:textColor="#018786"
                    android:textSize="11sp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
