<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ForgotPassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/forgotpasswordtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                android:fontFamily="@font/abeezee"
                android:importantForAutofill="no"
                android:text="@string/forgotpasswordlabel"
                android:textColor="#018786"
                android:textSize="37sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="LabelFor,TextFields" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailforforgotLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="85dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="#018786"
                app:boxStrokeColor="#018786"
                app:boxStrokeWidth="2dp"
                app:placeholderTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="#000000">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailforforgot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:inputType="none|textEmailAddress"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/invalidemail1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="25dp"
                android:alpha="0.7"
                android:singleLine="true"
                android:text="@string/invalidemail"
                android:textColor="#FF0000"
                android:textSize="11sp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/continuebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:backgroundTint="#018786"
                android:text="@string/continuebtn"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textStyle="bold"
                app:strokeColor="#000000"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>