<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MobileNumber"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white2"
    tools:context=".MobileNumberActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/sentmessageimg"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="60dp"
                android:contentDescription="@string/otpverifyimg"
                app:srcCompat="@drawable/mail_box_img"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/verifyotptxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/abeezee"
                android:importantForAutofill="no"
                android:text="@string/mobilenumbertext"
                android:textColor="#018786"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="LabelFor,TextFields" />

            <TextView
                android:id="@+id/sentmessagetxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/otptext"
                android:textAlignment="center"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="@drawable/border_square_white"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    app:ccpDialog_backgroundColor="@color/white2"
                    app:ccpDialog_cornerRadius="5dp"
                    app:ccpDialog_fastScroller_bubbleColor="#018786"
                    app:ccpDialog_fastScroller_handleColor="#018786"
                    app:ccpDialog_showCloseIcon="true"
                    app:ccpDialog_showFastScroller="true"
                    app:ccpDialog_showFlag="true"
                    app:ccpDialog_showNameCode="true"
                    app:ccpDialog_showPhoneCode="true"
                    app:ccpDialog_showTitle="true"
                    app:ccp_clickable="true"
                    app:ccp_flagBorderColor="#000000"
                    app:ccp_hintExampleNumber="true"
                    app:ccp_textSize="14sp" />

                <EditText
                    android:id="@+id/phonefortop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/border_square_white"
                    android:ems="10"
                    android:hint="@string/phoneforotp"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    android:textSize="14sp"
                    tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/progressBar3"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/sendotpbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#018786"
                    android:text="@string/sendotpbtn"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordLayout1"
                    app:strokeColor="#000000"
                    tools:ignore="TouchTargetSizeCheck" />

            </FrameLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>